--- a/style.css
+++ b/style.css
@@ -508,12 +508,22 @@ section {
 article {
     display: flex;
     width: 10rem;
-    justify-content: space-around;
+    justify-content: flex-start;
+    align-items: center;
     gap: 0.5rem;
+    min-height: 55px;
+}
+
+article div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 article .icon {
     cursor: default;
+    text-align: center;
+    margin-right: 0.5rem;
 }
 
 /* PROJECT SECTION */
@@ -529,8 +539,8 @@ article .icon {
 
 .project-img {
     border-radius: 2rem;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
 }
 
 .project-title {
@@ -667,7 +677,7 @@ footer p {
     flex: 1 1 300px;
     perspective: 1000px;
     max-width: 300px;
-    min-height: 450px;
+    max-height: 350px;
     min-width: 300px;
     width: 100%;
     margin-bottom: 1rem;
@@ -691,19 +701,41 @@ footer p {
     left: 0;
     width: 100%;
     height: 100%;
+    /* margin: 0; */
     backface-visibility: hidden;
     border-radius: 2rem;
 }
   
 .project-card-front {
     position: relative;
+    /* background-image: url(./assets/IntuitiveCS.png);
+    background-size: cover; */
 }
+
   
 .project-card-back {
     transform: rotateY(180deg);
     /* text-align: center;
     margin-top: 50%; */
     /* border-radius: 2rem; */
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-around;
+    /* text-align: center; */
+    padding: 1.5rem;
+}
+
+.project-card-back p {
+    /* margin-bottom: 1rem; */
+}
+
+.project-card-back .btn-container{
+    /* margin-top: 30%; */
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: auto;
 }
   
 /* TOOLTIP */
