--- a/style.css
+++ b/style.css
@@ -715,6 +715,8 @@ footer p {
   
 .project-card-back {
     transform: rotateY(180deg);
+
+    /* position: relative; */
     /* text-align: center;
     margin-top: 50%; */
     /* border-radius: 2rem; */
@@ -723,11 +725,11 @@ footer p {
     height: 100%;
     justify-content: space-around;
     /* text-align: center; */
-    padding: 1.5rem;
+    /* padding: 1.5rem; */
 }
 
 .project-card-back p {
-    /* margin-bottom: 1rem; */
+    text-align: center;
 }
 
 .project-card-back .btn-container{
@@ -764,7 +766,7 @@ footer p {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     font-size: 0.9rem;
     line-height: 1.4;
-    text-align: left;
+    text-align: center;
 }
   
   /* Arrow at bottom of tooltip */
